--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "eslint **/*.{js,jsx,ts,tsx}"
   },
   "devDependencies": {
+    "@types/emscripten": "^1.39.4",
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
@@ -32,6 +33,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.157",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.20"
