--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "devDependencies": {
     "@types/emscripten": "^1.39.4",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-hot-loader": "^4.1.1",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "babel-eslint": "^10.1.0",
@@ -33,10 +35,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.157",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.12.20"
+    "react-hot-loader": "^4.12.20",
+    "uuid": "^8.2.0"
   }
 }
