feat: build raw.wasm in prestart

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "prestart": "cd src/raw/wasm && make",
     "start": "parcel serve src/index.html --port 3000",
     "build": "parcel build src/index.html",
     "eslint": "eslint **/*.{js,jsx,ts,tsx}"
