--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "cd src/raw/wasm && make",
     "start": "parcel serve src/index.html --port 3000",
     "prebuild": "cd src/raw/wasm && make",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url /dcraw-wasm-poc/",
     "eslint": "eslint **/*.{js,jsx,ts,tsx}"
   },
   "devDependencies": {
